build: Hibernate Validator 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 	// thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
+	// Hibernate Valildation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// 테스트
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
