--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,9 @@ dependencies {
 	// Hibernate Valildation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	// Spring-security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
 	// 테스트
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
